--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">convertidor</string>
+    <string name="seleccione" />
+    <string name="opciones">Opciones</string>
 </resources>
